# draftboard

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  RIOT_KEY_APPLICATION.md  SELF_REVIEW.md  SENTRY_SETUP.md  TESTING_POLICY.md  eslint.config.js  handoff.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: launch.json
.claude/skills/draftboard/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scraper-watch.yml
.husky/: pre-commit
docs/: COMPETITIVE-ROADMAP.md  I18N-PROGRESS.md  VALIDATION-PENDING.md  api-catalog.md  draftboard-audit.cjs  draftboard-audit.docx  draftboard-todo.cjs  draftboard-todo.docx  releasing.md
docs/plans/: 2026-05-09-lol-draft-advisor-design.md  2026-05-09-lol-draft-advisor-implementation.md  2026-05-10-rso-roadmap.md
e2e/: smoke.spec.ts
scripts/: bundle-check.mjs  verify-data.mjs
src/: App.css  App.tsx  OverlayApp.tsx  config.test.ts  config.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: app_control.rs  db.rs  db_admin.rs  dpapi.rs  lcu.rs  lib.rs  main.rs  overlay.rs  panic_logger.rs
src/components/: AboutModal.tsx  AiChatView.tsx  AppFooter.tsx  BanSuggestionsPanel.tsx  BuildPanel.tsx  ChampionGuideView.stripHtml.test.ts  ChampionGuideView.tsx  ChampionPicker.test.tsx  ChampionPicker.tsx  ChampionPoolPanel.tsx  ChampionStatsPanel.test.tsx  ChampionStatsPanel.tsx  ChangelogModal.tsx  CoachView.tsx  CommandPalette.tsx  CompAnalysis.tsx  DataPrivacyView.tsx  DiagnosticsView.tsx  DraftAdherencePanel.tsx  DraftBoard.tsx  DraftCoachPanel.tsx  DraftWinrateBadge.tsx  EmptyState.tsx  EnemyScoutPanel.tsx  FeedbackModal.tsx  FirstRunHealthBanner.test.tsx  FirstRunHealthBanner.tsx  GpiRadar.tsx  HistoryView.tsx  InGameTimers.test.tsx  InGameTimers.tsx  InfoTooltip.tsx  LessonPlanView.tsx  LiveGamePanel.tsx  LiveGameView.tsx  LobbyScoutPanel.tsx  LogViewerModal.tsx  MatchupTipsPanel.tsx  NetworkStatusBanner.tsx  OnboardingView.tsx  (+30 more)
src/components/prefs/: AnthropicKeyField.tsx  Toggle.tsx  (+5 more)
src/data/: championArchetypes.test.ts  championArchetypes.ts  championRoles.test.ts  championRoles.ts  changelog.test.ts  changelog.ts  gameModeNames.test.ts  gameModeNames.ts  itemTags.test.ts  itemTags.ts  matchupTips.test.ts  matchupTips.ts  metaTierList.test.ts  metaTierList.ts  patchDisplay.test.ts  patchDisplay.ts  powerSpikes.ts  proPlayers.ts  queueNames.test.ts  queueNames.ts  runePerkIds.test.ts  runePerkIds.ts
src/db/: batchInsert.test.ts  batchInsert.ts  client.test.ts  client.ts  schema.sql
src/engine/: adaptiveBuildEngine.test.ts  adaptiveBuildEngine.ts  aramEngine.test.ts  aramEngine.ts  banEngine.test.ts  banEngine.ts  buildClassifier.test.ts  buildClassifier.ts  championPoolEngine.test.ts  championPoolEngine.ts  coachEngine.test.ts  coachEngine.ts  draftWinrateEngine.test.ts  draftWinrateEngine.ts  gpiEngine.test.ts  gpiEngine.ts  inGameAdapter.test.ts  inGameAdapter.ts  leakEngine.test.ts  leakEngine.ts  liveCoachEngine.test.ts  liveCoachEngine.ts  lobbyInsights.test.ts  lobbyInsights.ts  matchAnalytics.test.ts  matchAnalytics.ts  patchImpactEngine.test.ts  patchImpactEngine.ts  playstyleEngine.test.ts  playstyleEngine.ts  progressEngine.test.ts  progressEngine.ts  rankBenchmarks.test.ts  rankBenchmarks.ts  runeAdvice.test.ts  runeAdvice.ts  scoutInsights.test.ts  scoutInsights.ts  suggestionEngine.test.ts  suggestionEngine.ts  (+8 more)
src/hooks/: useAppShortcuts.test.ts  useAppShortcuts.ts  useAutoOpenCoach.ts  useChampionDbBoot.ts  useChampionGuideEvent.ts  useClipboardCopy.test.tsx  useClipboardCopy.ts  useDraftDerivations.ts  useDraftLogger.test.ts  useDraftLogger.ts  useDraftPrediction.ts  useEnemyCounters.ts  useEnemyMains.test.ts  useEnemyMains.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useHealthStatus.test.ts  useHealthStatus.ts  useKeyboardShortcuts.ts  useLcuPersonalData.ts  useLcuToasts.ts  useLiveGame.test.ts  useLiveGame.ts  useLoLWindowMode.test.ts  useLoLWindowMode.ts  useNetworkStatus.test.ts  useNetworkStatus.ts  useOverlayFollowLol.ts  useRoleDerivation.ts  useSentrySessionTags.ts  useSuggestions.ts  useSystemToasts.ts  useTelemetryConsent.ts  useThemeAccent.ts  useTrayHealth.ts  useViewBreadcrumbs.ts  useVoiceCoach.ts
src/i18n/: i18n.test.ts  index.ts
src/services/: aggregateRepo.test.ts  aggregateRepo.ts  aiChampionGuide.test.ts  aiChampionGuide.ts  aiChat.ts  aiCoach.test.ts  aiCoach.ts  aiMatchupTips.ts  aiMemory.ts  aiPromptBuilder.test.ts  aiPromptBuilder.ts  aiProvider.test.ts  aiProvider.ts  appUpdater.ts  autoProSync.ts  autostart.ts  breadcrumbs.ts  championDb.resolveMeta.test.ts  championDb.ts  championSpells.ts  championTips.test.ts  championTips.ts  chatRepo.test.ts  chatRepo.ts  dataDragon.ts  dbBackup.test.ts  dbBackup.ts  dpmTierlist.test.ts  dpmTierlist.ts  draftCoach.test.ts  draftCoach.ts  draftsRepo.test.ts  draftsRepo.ts  enemyCounters.test.ts  enemyCounters.ts  enemyScout.ts  fetchNotify.test.ts  fetchNotify.ts  httpClient.ts  inputValidation.test.ts  (+51 more)
src/state/: autoActions.hook.test.tsx  autoActions.test.ts  autoActions.ts  draftFlow.integration.test.ts  draftFlowRender.integration.test.tsx  draftStore.test.ts  draftStore.ts  gameflowRoster.test.ts  gameflowRoster.ts  inGameDetection.ts  lcuSync.test.ts  lcuSync.ts  patchDetection.test.ts  prefsStore.dpapi.test.ts  prefsStore.test.ts  prefsStore.ts  scheduledJobs.ts  updateChannel.test.ts
src/test/: a11y.smoke.test.tsx  setup.ts  smoke.test.ts  tauriWindowState.test.ts
src/types/: champion.ts
(+35 files in other folders)
