[package]
name = "lol-draft-advisor-app"
version = "0.4.0"
description = "Draftboard — Pro-level LoL draft advisor + AI coach"
authors = ["Draftboard"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lol_draft_advisor_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"
# Auto-start on Windows boot — toggleable from Settings. Standard QoL all
# competing apps (Mobalytics, Blitz, Porofessor) ship with.
tauri-plugin-autostart = "2"
# Persistent logging to disk (and stdout in dev). Writes to %APPDATA%/
# com.draftboard.app/logs/. About modal exposes the directory so users
# can attach logs when reporting bugs.
tauri-plugin-log = "2"
# Native file picker + save dialog for DB export/import flows. Avoids the
# browser-style download path which doesn't exist in Tauri.
tauri-plugin-dialog = "2"
# Filesystem ops (copy DB file) for backup/restore. Scoped to user-chosen
# paths only via the picker — no arbitrary path access.
tauri-plugin-fs = "2"
# Auto-update plugin. Reads the signed update manifest from our CF worker,
# downloads + verifies signature, and lets the user install with a click.
# Generate signing keys with: `npx tauri signer generate -w ~/.tauri/draftboard.key`
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots", "url"] }
futures-util = "0.3"
base64 = "0.22"
anyhow = "1"
once_cell = "1"
log = "0.4"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Bundled SQLite for pre-boot integrity check. Runs `PRAGMA integrity_check`
# BEFORE tauri-plugin-sql attaches its handle, so we can quarantine a
# corrupt DB by renaming it (no file-lock conflict). ~500KB binary
# overhead, worth it for boot reliability.
rusqlite = { version = "0.32", features = ["bundled"] }

# Win32 access for overlay topmost re-assertion + LoL window detection.
# Mirrors what Mobalytics/Itero do via Overwolf SDK — we call SetWindowPos
# with HWND_TOPMOST every ~1s while the overlay is visible so it doesn't
# get hidden behind the game when the user clicks back into LoL.
[target.'cfg(windows)'.dependencies]
# Pinned to 0.61 to match the version Tauri 2 pulls in transitively. Mixing
# windows-rs versions makes HWND types non-interchangeable — `win.hwnd()`
# returns a 0.61 HWND, so SetWindowPos must come from the same crate version.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }



# Strict lint configuration. Run as part of CI / pre-commit.
# Override individual lints inline with `#[allow(clippy::lint_name)]`
# when justified — never blanket-allow.
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
# Common high-value pedantic lints worth turning back on:
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
panic = "warn"
# Override too-noisy defaults for our domain (LCU JSON parsing
# returns lots of Option<Value> chains where ? gymnastics hurt
# readability more than they help).
needless_pass_by_value = "allow"
missing_errors_doc = "allow"

[lints.rust]
# `unsafe` is unavoidable for the Win32 overlay re-assertion path
# (SetWindowPos / GetForegroundWindow). Warn so any NEW unsafe blocks
# get reviewer attention without breaking the existing wrappers.
unsafe_code = "warn"
unused_must_use = "deny"

